<resources>
    <string name="app_name">Dhamma Notes</string>
    <string name="empty_string"></string>

    <string name="main_title">တရားေတာ္မ်ား</string>
    <string name="settings_title">Settings</string>

    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_set_date">Set Date</string>
    <string name="action_ok">OK</string>
    <string name="action_dismiss">Dismiss</string>
    <string name="action_set">Set</string>
    <string name="action_reset">Reset</string>
    <string name="action_clear">Clear</string>
    <string name="action_set_round">Set Round</string>

    <string name="message_download">Please, download audio file.</string>
    <string name="message_download_complete">Download completed - %s</string>
    <string name="download_noti_description">Downloading - %s</string>
    <string name="player_title">Player</string>
    <string name="player_time_diplay">00:00</string>

    <string name="count_title">စိတ္ပုတီး</string>
    <string name="count_diplay_caption">Count</string>
    <string name="round_diplay_caption">Round</string>
    <string name="count_diplay">0</string>
    <string name="round_diplay">0</string>
    <string name="date_clear_title">Clear All Start Date</string>
    <string name="message_date_clear">Are you sure to clear all start date?</string>

    <string name="damma_news_url">http://www.pyephyohan.info/json_files/idhamma/android_news.xml</string>

    <string name="prefs_group_general">General</string>
    <string name="prefs_font_size">Font Size</string>
    <string name="prefs_font_size_default">1</string>
    <string-array name="prefs_font_size_text">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>
    <string-array name="prefs_font_size_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="prefs_about">About</string>
    <string name="version_text">Version - %s</string>
    <string name="about_text"><Data>
<![CDATA["
      <p><b>Dhamma Droid</b></p>
      <p>Develop by <a href='http://www.facebook.com/soeminnminn'>Soe Minn Minn</a></p>
      <p>Copyright \u00A9 2015 The Android Open Source Project</p>
      "]]>
</Data></string>

    <string name="prefs_group_notification">Notification</string>
    <string name="prefs_alarm_volume">Alarm Volume</string>
    <string name="prefs_alarm_volume_summary">Change alarm volume.</string>
    <string name="prefs_alarm_notification">Alarm</string>
    <string name="prefs_alarm_notification_summary">Setup alarm and notification.</string>
    <string name="prefs_ninenawin">9 Nawin Notification</string>
    <string name="prefs_ninenawin_summary_on">9 Nawin Notification</string>
    <string name="prefs_ninenawin_summary_off">9 Nawin Notification</string>
</resources>
