<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout 
        android:id="@+id/titleFrame"
        style="@style/DialogTitleLayout" >

        <TextView
            android:id="@android:id/title"
            style="@style/DialogLayout.Title"
            android:text="@string/action_set_date" />
        
    </RelativeLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
	    android:layout_height="0dip"
	    android:layout_weight="0.1"
	    android:orientation="vertical"
	    android:isScrollContainer="true" >
        
        <FrameLayout 
            android:id="@+id/layoutClear"
            android:layout_width="match_parent"
            android:layout_height="@dimen/action_bar_default_height"
            android:paddingStart="@dimen/dialog_horizontal_margin"
	        android:paddingLeft="@dimen/dialog_horizontal_margin"
	        android:paddingEnd="@dimen/dialog_horizontal_margin"
	        android:paddingRight="@dimen/dialog_horizontal_margin" >
	        
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/date_clear_title" />
            
            <Button 
                android:id="@+id/buttonClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end|right"
                android:paddingStart="12dip"
	        	android:paddingLeft="12dip"
	        	android:paddingEnd="12dip"
	        	android:paddingRight="12dip"
                android:text="@string/action_clear" />
            
        </FrameLayout>
        
        <FrameLayout 
            android:id="@+id/layoutNav"
            android:layout_width="match_parent"
            android:layout_height="@dimen/action_bar_default_height"
            android:paddingStart="@dimen/dialog_horizontal_margin"
	        android:paddingLeft="@dimen/dialog_horizontal_margin"
	        android:paddingEnd="@dimen/dialog_horizontal_margin"
	        android:paddingRight="@dimen/dialog_horizontal_margin"
            android:background="@drawable/header_background_light" >
            
            <ImageButton
                android:id="@+id/buttonPrevious"
                style="@style/ActionButton" 
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_arrow_left"
                android:contentDescription="@string/empty_string" />
            
            <ImageButton
                android:id="@+id/buttonNext" 
                style="@style/ActionButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end|right"
                android:src="@drawable/ic_arrow_right"
                android:contentDescription="@string/empty_string" />
            
            <TextView 
                android:id="@+id/textMonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/app_name" />
            
        </FrameLayout>
        
        <ScrollView 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content" >
	        
	        <RadioGroup 
		        android:id="@+id/groupSetDate"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:paddingTop="@dimen/dialog_vertical_margin"
		        android:paddingBottom="@dimen/dialog_vertical_margin"
		        android:paddingStart="@dimen/dialog_horizontal_margin"
		        android:paddingLeft="@dimen/dialog_horizontal_margin"
		        android:paddingEnd="@dimen/dialog_horizontal_margin"
		        android:paddingRight="@dimen/dialog_horizontal_margin"
		        android:orientation="vertical" >
		        
		        <RadioButton 
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content" />
		        
		    </RadioGroup>
	        
	    </ScrollView>
        
    </LinearLayout>
    
    <include
        android:id="@+id/layoutDlgButtons"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_button_bar_height"
        layout="@layout/layout_dialog_two_buttons" />
    
</LinearLayout>
